功能扩展：1通过截图工具完成应用封面生成；2提供下载源码接口